--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_esim: ^0.0.4
   url_launcher: ^6.3.0
+  permission_handler: ^10.0.0
+
 
 dev_dependencies:
   flutter_test:
